Changed line position of link to twine story url comment in theworking html file.

--- a/working_twine_storyplan.html
+++ b/working_twine_storyplan.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play CFG.</tw-noscript></noscript></tw-story>
-<tw-storydata name="CFG" startnode="1" creator="Twine" creator-version="2.3.15" ifid="15787D9C-48BE-49D4-8BD7-2B825CAF5354" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Need a Drink" tags="" position="104,76.5" size="100,100">You&#39;re thirsty - damn thirsty.
+<tw-storydata name="CFG" startnode="1" creator="Twine" creator-version="2.3.15" ifid="15787D9C-48BE-49D4-8BD7-2B825CAF5354" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Need a Drink" tags="" position="104,76.5" size="100,100"><--Link to online story https://twinery.org/2/#!/stories/47d3d499-278d-492d-9a0e-922f384c99e4-->You&#39;re thirsty - damn thirsty.
 
-<--Link to online story https://twinery.org/2/#!/stories/47d3d499-278d-492d-9a0e-922f384c99e4-->
+
 
 Not just thirsty, you want a //&#39;&#39;real&#39;&#39;// drink, poured by someone else.
 
